Fix auth design on smaller screens

--- a/resources/assets/scss/pages/auth.scss
+++ b/resources/assets/scss/pages/auth.scss
@@ -17,11 +17,15 @@
         align-items: center;
         justify-content: space-between;
         padding: 40px 0 20px 0;
+
+        h2 {
+            text-align: center;
+        }
     }
 
     .content {
-        max-width: 80%;
-        gap: 10px;
+        width: 70%;
+        max-width: 400px;
     }
 
     .content-info {
